--- a/HelicesRNAs.tex
+++ b/HelicesRNAs.tex
@@ -161,7 +161,7 @@ but the number of suboptimal structures grows exponentially with the energy rang
 % frame 11
 \frametitle{Drawback of abstract shape}
 \begin{frame}
-\frametitle{}
+\frametitle{Drawback of abstract shape}
    \begin{block}{\small Drawback of abstract shape}
    \begin{itemize} 
    \item abstract shape is position independent
@@ -169,10 +169,14 @@ but the number of suboptimal structures grows exponentially with the energy rang
    \end{block}
    \begin{block}{\small Consequence of the drawback}
    \begin{figure}
+     \item make the current implementation of shape abstraction unsuitable for the analysis of folding landscapes in a detailed fashion
+   \end{figure}
+   \end{block}  
+   \begin{block}{\small Example}
+   \begin{figure}
      \includegraphics[scale=0.55]{images/drawback_1.jpg} 
    \end{figure}
-   \end{block}   
-   the drawback make the current implementation of shape abstraction unsuitable for the analysis of folding landscapes in a detailed fashion
+   \end{block}      
 \end{frame}
 
 
@@ -266,7 +270,7 @@ but the number of suboptimal structures grows exponentially with the energy rang
 
 % frame 16
 \begin{frame}
-\frametitle{Possible problem}
+\frametitle{Problem}
   \small
   %Although the helices space grows considerably slower than structure space, but
   %it is still exponential
@@ -322,7 +326,7 @@ $\pgfmathprintnumber{\pgfplotstableregressiona} \cdot x
 
 % frame 17
 \begin{frame}
-\frametitle{Solution of possible problem}
+\frametitle{Solution of the problem}
   \small
   One of the solution: we can limit the helices space by setting an energy range on
   it
