--- a/HelicesRNAs.tex
+++ b/HelicesRNAs.tex
@@ -28,7 +28,8 @@
 
 
 \title{Helices indices of RNAs}
-\author{\large Jiabin~Huang}
+\author{\large Jiabin~Huang\\
+               Schattenwald}
 \date{\today}
 
 \institute[ExpBI]{\normalsize
@@ -135,7 +136,7 @@ but the number of suboptimal structures grows exponentially with the energy rang
     Solution: further classify secondary structures space within the energy range with different approaches.
     \begin{itemize} 
     \item abstract shape is one approach in this direction
-    \item developed by Giegerich and Voss
+    \item developed by Voss and Giegerich
     \item intial idea:
     \begin{enumerate}
       \item the user is usually only interested in structures that show fundamental differences
